fixed audio card styling on safari

--- a/src/assets/styles/components/_audioCard.scss
+++ b/src/assets/styles/components/_audioCard.scss
@@ -6,12 +6,11 @@
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(10px);
   border-radius: 12px;
-
-  img {
-  }
+  overflow-x: auto;
 
   .audio-cover {
     position: relative;
+    flex-shrink: 0;
     width: 80px;
     height: 80px;
     margin-right: 20px;
